Fix wrapping of bold element-list items.

--- a/site/assets/css/main.scss
+++ b/site/assets/css/main.scss
@@ -278,7 +278,7 @@ body {
 				grid-area: nav;
 				overflow-x: clip;
 				li {
-					> a {
+					a {
 						display: block;
 						overflow: hidden;
 						text-overflow: ellipsis;
